my-backend-namespace.yml
apiVersion: v1
kind: Namespace

metadata:
  name: backend-ns
  labels:
    apps: backend-apps
