my-deamonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata: 
   name: frontend-daemonset
   labels: 
     app: frontend

spec:
  updateStrategy:
    type: RollingUpdate
    RollingUpdate:
      maxUnavailable: 2

  template:
    metadata: 
      name: my-pod-webserver
      labels: 
        apps: my-app
        tier: frontend
    spec:
      containers:
      - name: my-container-nginx
        image: nginx

      nodeSelector:
        diskType: ssd

  selector:
    matchLabels: 
     apps: my-app
