my-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels: 
    app: frontend

spec:
  template:
    metadata:
      name: pod-my-nginx
      labels:
        env: production
    spec:
      containers: 
        - name: nginx-container
          image: nginx:1.18.0
  selector:
    matchLabels:
      env: production
  replicas: 8
