my-pod-apache.yml
apiVersion: v1
kind: Pod
metadata:
   name: my-pod-apache  
   labels:
     app-type: web
     tier: webserver
spec:
   containers:
   - name: my-container-apache
     image: httpd
