my-volume-persistent.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod

spec: 
  containers:
  - name: redis-container
    image: redis
    volumeMounts:
    - mountPath: "/my-volume"
      name: "persist-volume"
      

  volumes:
  -  name: "persist-volume"
     hostPath:
       path: "/var/lib/2-persist"
