myresources-mng-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: resources-pod
spec:
  containers:
  - name: apache-container
    image: httpd
    
    resources:
      requests: 
        cpu: "500m"
        memory: "128Mi"
      limits:
        cpu: "1000m"
        memory: "256Mi"
