redis-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    apps: backend

spec:
  containers:
  - name: redis-container
    image: redis
