tocat-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-pod
  labels:
    apps: app-java

spec:
  containers:
  - name: container-toncat
    image: tomcat
