my-cluster-ip-service.yml
apiVersion: v1
kind: Pod 
metadata:
  name:  web-pod
  labels:
    type: web-app

spec:
  containers:
    - name: web-server-apache
      image: httpd
      ports:
        - containerPort: 80
    
    - name: web-server-tomcat
      image: tomcat
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    type: web-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
